# hackathon-ielts-project

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GITHUB_SETUP.md  README.md  SETUP.md  index.html  lovable-mcp-prompts.md  package-lock.json  package.json  pyproject.toml
.claude/skills/ielts-examiner/: SKILL.md
.claude/skills/lovable/: SKILL.md
.claude/skills/tavus-cvi/: SKILL.md
.cursor/skills/responsive-layout/: SKILL.md
app/: README.md  app_core.py  server.py  tavus.py
app/public/: app.js  index.html  styles.css
app/tests/: test_app.py
docs/: ASSESSMENT.md  ielts-speaking-coach-design.md
documentation/: GITHUB_SETUP.md  LOVABLE_PROJECT.md  SETUP.md  day-1-screens.md  flows.md  launch-page.md  lovable-knowledge.md  lovable-skills-setup.md
examples/: demo.py  live_demo.py  server.py
prompts/: examiner-pal-system-prompt.md
scripts/: setup_tavus.py
skills/accessibility-speaklab/: SKILL.md  checklist.md
skills/i18n-foundation/: SKILL.md  strings-conventions.md
skills/responsive-layout/: breakpoints.md
src/: App.tsx  index.css
src/assessment/: __init__.py  config.py  pal.py  schema.py  session.py  stt.py
src/assessment/features/: pronunciation.py
src/assessment/judges/: __init__.py
src/components/: AppShell.tsx  Button.tsx  ProtectedRoute.tsx
src/contexts/: AuthContext.tsx
src/lib/: supabase.ts
src/pages/: HomePage.tsx  LandingPage.tsx  LoginPage.tsx  OnboardingPage.tsx  PlaceholderPage.tsx  SessionPreviewPage.tsx  SignupPage.tsx
supabase/migrations/: 001_profiles.sql
tests/: test_judges.py
